--- a/TaskLib/TaskLib.csproj
+++ b/TaskLib/TaskLib.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ITaskManager.cs" />
+    <Compile Include="Paymen.cs" />
     <Compile Include="ProjectTask.cs" />
     <Compile Include="TaskMan.cs" />
     <Compile Include="TaskNumber.cs" />
